--- a/impactaFrontAngular/src/app/contato/contato.component.html
+++ b/impactaFrontAngular/src/app/contato/contato.component.html
@@ -6,7 +6,7 @@
   <div class="container">
     <h3 class=" text-center my-3">Contate-nos</h3>
     <p style="font-size: 16px;" class="lead text-justify text-center">
-      Enive sua mensagem, sugestão ou comentário, e logo entraremos em contato! :)
+      Envie sua mensagem, sugestão ou comentário, e logo entraremos em contato! :)
 
     </p>
   </div>
