--- a/impactaFrontAngular/src/app/login/login.component.html
+++ b/impactaFrontAngular/src/app/login/login.component.html
@@ -24,10 +24,10 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Senha</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha" [(ngModel)]='userLogin.senha'>
+                        <input type="password" class="form-control" id="exampleInputPassword1" (keypress)="entrarEnter($event)" placeholder="Senha" [(ngModel)]='userLogin.senha'>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-outline-secondary w-25 botao-login" (click)='entrar()'>Entrar</button>
+                        <button type="submit" class="btn btn-outline-secondary w-25 botao-login" (keypress)="entrarEnter($event)" (click)='entrar()'>Entrar</button>
                     </div>
                 </div>
          
