--- a/impactaFrontAngular/src/app/sobre/sobre.component.html
+++ b/impactaFrontAngular/src/app/sobre/sobre.component.html
@@ -23,9 +23,9 @@
 
       <h1 class="text-center mb-5">Apresentação do projeto</h1>
       <div class="video-box">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/V3qoLABjYwA" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ibnMR1EqTb0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        
       </div>
 
     </div>
@@ -40,7 +40,7 @@
   </div>
   <div _ngcontent-vaq-c53="" id="carouselExampleControls" data-ride="carousel" class="carousel slide">
     <div _ngcontent-vaq-c53="" class="carousel-inner">
-      <div _ngcontent-vaq-c53="" class="carousel-item">
+      <div _ngcontent-vaq-c53="" class="carousel-item active">
         <div _ngcontent-vaq-c53="" class="row mt-4">
           <div _ngcontent-vaq-c53="" class="col-md-6 d-flex justify-content-end pr-5">
             <div _ngcontent-vaq-c53="" class="card border-0" style="width: 18rem;">
@@ -93,7 +93,7 @@
           </div>
         </div>
       </div>
-      <div _ngcontent-vaq-c53="" class="carousel-item active">
+      <div _ngcontent-vaq-c53="" class="carousel-item ">
         <div _ngcontent-vaq-c53="" class="row mt-4">
           <div _ngcontent-vaq-c53="" class="col-md-6 d-flex justify-content-end pr-5">
             <div _ngcontent-vaq-c53="" class="card border-0" style="width: 18rem;">
