--- a/impactaFrontAngular/src/app/cadastro/cadastro.component.html
+++ b/impactaFrontAngular/src/app/cadastro/cadastro.component.html
@@ -29,13 +29,15 @@
                     <div class="form-group">
                         <label for="senha">Senha</label>
                         <input type="password" class="form-control" id="senha" placeholder="Digite sua senha" (input)='conferirSenha($event)' value='{{senha}}'>
+                        <small>Insira pelo menos 6 caracteres.</small>
                     </div>
                     <div class="form-group">
                         <label for="senhaConf">Confirme sua senha</label>
-                        <input type="password" class="form-control" id="senhaConf" placeholder="Confirme sua senha" [(ngModel)]='usuario.senha'>
+                        <input type="password" class="form-control" id="senhaConf" placeholder="Confirme sua senha" [(ngModel)]='usuario.senha' (keypress)="entrarEnter($event)" >
+                        
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-outline-secondary w-25 botao-cadastrar" (click)='cadastrar()'>Cadastrar</button>
+                        <button class="btn btn-outline-secondary w-25 botao-cadastrar" (keypress)="entrarEnter($event)"  (click)='cadastrar()'>Cadastrar</button>
                     </div>
     
                     <p class="text-center m-4">Já possui login?<a class="linkverdecadastro" routerLink="/login"> Entre aqui!</a> </p>
