--- a/impactaFrontAngular/src/app/delete-hospital/delete-hospital.component.html
+++ b/impactaFrontAngular/src/app/delete-hospital/delete-hospital.component.html
@@ -4,9 +4,8 @@
 
 
 
-
-<div class="container">
-    <div class="row mt-5 mb-5">
+<div class="container d-flex justify-content-center align-items-center mb-5">
+    <div class="row mt-5 mb-5 d-flex justify-content-center align-items-center mb-5 w-100">
        
         <div class="col-md-8">
             <div class="card mt-5">
@@ -23,7 +22,7 @@
                 </div>
             </div>
 
-            <h5 class="text-center">Tem certeza que deseja apagar este hospital?</h5>
+            <h5 class="text-center mt-5 ">Tem certeza que deseja apagar este hospital?</h5>
             <div class="d-flex justify-content-center mt-5">
                 <button class="btn btn-outline-success mr-3" (click)="btnSim()">Sim</button>
                 <button class="btn btn-outline-danger" (click)="btnNao()">Não</button>
