--- a/impactaFrontAngular/src/app/doacao/doacao.component.css
+++ b/impactaFrontAngular/src/app/doacao/doacao.component.css
@@ -7,3 +7,90 @@ hr{
     max-width: 150px;
     overflow-x: hidden;
 }
+
+.gambs{
+    overflow-x: hidden;
+}
+.imagem{
+    width: 100%;
+    height: auto;
+}
+
+.impacto, .coracao {
+    width: 30px;
+    height: 30px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0px 12px ;
+}
+
+#impacto{
+    background-image: url('../../assets/img/seta-white.png');
+}
+
+#impacto:hover{
+    cursor: pointer;
+    opacity: 0.9;
+}
+#impacto:hover{
+    background-image: url('../../assets/img/seta.png');
+}
+
+
+
+
+#coracao{
+    background-image: url('../../assets/img/coracao-white.png');
+}
+
+#coracao:hover{
+    cursor: pointer;
+    opacity: 0.8;    
+}
+
+#coracao:hover{
+    background-image: url('../../assets/img/coracao.png');
+}
+
+
+
+
+
+
+.impactou-texto{
+    visibility: hidden;
+    text-decoration: none;
+    color: red;
+}
+
+.a-out-icon:hover .impactou-texto{
+    visibility: visible;
+    text-decoration: none;
+
+}
+
+.apoiou-texto{
+    visibility: hidden;
+    color: red;
+    text-decoration: none;
+}
+
+.a-out-icon:hover .apoiou-texto{
+    visibility: visible;
+    text-decoration: none;
+
+}
+
+
+
+.botao-pesquisar{
+    border: 1px solid var(--primary-red);
+    background-color: white;
+    color: var(--primary-red);
+}
+
+.botao-pesquisar:hover{
+    background-color: var(--primary-red);
+    color: white;
+}
