--- a/impactaFrontAngular/src/app/feed/feed.component.css
+++ b/impactaFrontAngular/src/app/feed/feed.component.css
@@ -25,3 +25,168 @@
     width: 100%;
     height: auto;
 }
+/* 
+.editar{
+    color: var(--primary-green);
+    transition: ease 300ms;
+}
+
+.editar:hover{
+    opacity: 0.8;
+    text-decoration: underline;
+}
+
+.apagar{
+    color: var(--primary-red);
+    transition: ease 300ms;
+}
+
+.apagar:hover{
+    opacity: 0.8;
+    text-decoration: underline;
+} */
+
+
+
+
+
+
+.impacto, .coracao {
+    width: 30px;
+    height: 30px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0px 12px ;
+}
+
+#impacto{
+    background-image: url('../../assets/img/seta-white.png');
+}
+
+#impacto:hover{
+    cursor: pointer;
+    opacity: 0.9;
+}
+#impacto:hover{
+    background-image: url('../../assets/img/seta.png');
+}
+
+
+
+
+#coracao{
+    background-image: url('../../assets/img/coracao-white.png');
+}
+
+#coracao:hover{
+    cursor: pointer;
+    opacity: 0.8;    
+}
+
+#coracao:hover{
+    background-image: url('../../assets/img/coracao.png');
+}
+
+
+
+
+
+
+.impactou-texto{
+    visibility: hidden;
+    text-decoration: none;
+    color: red;
+}
+
+.a-out-icon:hover .impactou-texto{
+    visibility: visible;
+    text-decoration: none;
+
+}
+
+.apoiou-texto{
+    visibility: hidden;
+    color: red;
+    text-decoration: none;
+}
+
+.a-out-icon:hover .apoiou-texto{
+    visibility: visible;
+    text-decoration: none;
+
+}
+
+
+.botao-pesquisar{
+    border: 1px solid var(--primary-red);
+    background-color: white;
+    color: var(--primary-red);
+    min-width: 150px;
+}
+
+.botao-pesquisar:hover{
+    background-color: var(--primary-red);
+    color: white;
+}
+
+
+
+
+
+
+.editar-icon, .apagar-icon {
+    width: 25px;
+    height: 25px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0px 12px ;
+}
+
+#editou{
+    background-image: url('../../assets/icons/pencil.png');
+}
+
+#editou:hover{
+    cursor: pointer;
+    opacity: 0.9;
+}
+#editou:hover{
+    background-image: url('../../assets/icons/pencil-green.png');
+}
+
+
+
+
+#apagou{
+    background-image: url('../../assets/icons/trash.png');
+}
+
+#apagou:hover{
+    cursor: pointer;
+    opacity: 0.8;    
+}
+
+#apagou:hover{
+    background-image: url('../../assets/icons/trash-red.png');
+}
+
+
+
+
+
+@media (max-width:770px) {
+
+    .botao-pesquisar{
+        width: 40px ;
+    }
+    .botao-flex{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-right: 0px;
+        margin-top: 12px;
+    }
+
+}
