--- a/impactaFrontAngular/src/app/hospital/hospital.component.css
+++ b/impactaFrontAngular/src/app/hospital/hospital.component.css
@@ -16,3 +16,88 @@ hr{
     max-width: 150px;
     overflow-x: hidden;
 }
+
+.gambs{
+    overflow-x: hidden;
+}
+
+.tabela{
+    overflow-x: scroll;
+}
+
+/* 
+.editar{
+    color: var(--primary-green);
+    transition: ease 300ms;
+}
+
+.editar:hover{
+    opacity: 0.8;
+    text-decoration: underline;
+}
+
+.apagar{
+    color: var(--primary-red);
+    transition: ease 300ms;
+}
+
+.apagar:hover{
+    opacity: 0.8;
+    text-decoration: underline;
+} */
+
+
+
+
+
+
+
+.editar-icon, .apagar-icon {
+    width: 25px;
+    height: 25px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0px 12px ;
+}
+
+#editou{
+    background-image: url('../../assets/icons/pencil.png');
+}
+
+#editou:hover{
+    cursor: pointer;
+    opacity: 0.9;
+}
+#editou:hover{
+    background-image: url('../../assets/icons/pencil-green.png');
+}
+
+
+
+
+#apagou{
+    background-image: url('../../assets/icons/trash.png');
+}
+
+#apagou:hover{
+    cursor: pointer;
+    opacity: 0.8;    
+}
+
+#apagou:hover{
+    background-image: url('../../assets/icons/trash-red.png');
+}
+
+
+
+.botao-pesquisar{
+    border: 1px solid var(--primary-red);
+    background-color: white;
+    color: var(--primary-red);
+}
+
+.botao-pesquisar:hover{
+    background-color: var(--primary-red);
+    color: white;
+}
