--- a/impactaFrontAngular/src/app/navbar-sangue/navbar-sangue.component.css
+++ b/impactaFrontAngular/src/app/navbar-sangue/navbar-sangue.component.css
@@ -5,6 +5,10 @@
     font-size: 18px;
 }
 
+.font18{
+    font-size: 18px;
+}
+
 .botoes-menu{
     margin: 0px 8px;
 }
@@ -52,6 +56,12 @@
     right: 20px;
 }
 
+.botao-perfil{
+    position: fixed;
+    top: 10px;
+    right: 90px;
+}
+
 .botao-cadastrar{
     position: fixed;
     top: 10px;
@@ -82,4 +92,29 @@
     
     padding: 0px 12px;
     
+}
+
+
+@media (max-width:770px) {
+
+    .botao-sair{
+   
+        right: 130px;
+    }
+    .botao-perfil{
+      
+        right: 190px;
+    }
+    .botao-login{
+   
+        right: 130px;
+    }
+    .botao-cadastrar{
+      
+        right: 190px;
+    }    
+    .feed-resp{
+        margin-top: 20px;
+    }
+
 }
