--- a/impactaFrontAngular/src/app/put-postagem/put-postagem.component.html
+++ b/impactaFrontAngular/src/app/put-postagem/put-postagem.component.html
@@ -37,14 +37,55 @@
             <div class="container-fluid w-100 ">
 
               <div class="row">
-
+                
                 <div class="col-md-6">
+
+                  <!-- <div class="col-md-6">
                   <div class="form-group mt-3 ">
                     <label class="text" for="cidade">Cidade:</label>
                     <input type="text" class="form-control" id="cidade" placeholder="Digite aqui sua cidade"
                       [(ngModel)]='postagem.cidade'>
                   </div>
+                </div> -->
+
+                  <!-- DROP CIDADE -->
+
+
+                  <div class="row mb-3">
+                    <div class="col-md-12">
+                      <div class="row  d-flex justify-content-center align-items-center">
+                        <div class="col-md-12 ">
+                          <label class="mt-3" for="tema">Escolha um Estado</label>
+                          <select id="estado" name="Estado" class="form-control" (change)="estadoSelecionado($event)">
+                            <option *ngFor="let item of estados" value={{item.id}}>{{item.name}}</option>
+                          </select>
+                        </div>
+                      </div>
+
+
+                      <div class="row  d-flex justify-content-center align-items-center">
+                        <div class="col-md-12 ">
+                          <label class="mt-3" for="tema">Escolha uma Cidade</label>
+                          <select id="cidade" name="Cidade" class="form-control" [(ngModel)]='postagem.cidade'>
+                            <option *ngFor="let item of cidades" value={{item.name}}>{{item.name}}</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+
+                  <!-- / DROP CIDADE -->
+
                 </div>
+
+
+
+
+
+
+
+
 
                 <div class="col-md-6">
                   <div class="form-group mt-3 ">
@@ -82,7 +123,7 @@
                   <label class="" for="tema">Escolha um tipo sanguíneo</label>
                   <select id="tipo-sangue" name="sangue" class="form-control" [(ngModel)]='postagem.sangue'>
                     <option value="" disabled selected>Tipo sanguíneo</option>
-                    <option value="Prefiro não informar">Prefiro não informar</option>
+                    <option value="Não se aplica">Não se aplica</option>
                     <option value="A+">A+</option>
                     <option value="A-">A-</option>
                     <option value="B+">B+</option>
